--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
   <div class="heart-container"></div>
   <div class="content">
-    <h1 class="question bounce">Will you go on a date with me? </h1>
+    <h1 class="question bounce">Will you go on a date with me Shuchi? </h1>
     <div class="buttons">
       <button id="yesBtn">Yes </button>
       <button id="noBtn">No </button>
     </div>
   </div>
 
-  <audio id="boingSound" src="https://www.myinstants.com/media/sounds/cartoon-jump.mp3"></audio>
+  
   <script src="script.js"></script>
 </body>
 </html>
