--- a/thankyou.html
+++ b/thankyou.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: 'Pacifico', cursive;
-      background: linear-gradient(to top right, #ffe5b4, #ffd1dc);
+      background-color: #ffc0cb;
       overflow: hidden;
       display: flex;
       justify-content: center;
@@ -18,6 +18,7 @@
       height: 100vh;
       text-align: center;
       color: #d14e72;
+      font-style: italic;
     }
 
     h1 {
@@ -57,3 +58,4 @@
   </div>
 </body>
 </html>
+
